public/screen.css
html {
  background: url('images/space.png') no-repeat center center fixed;
  background-size: cover;
  text-size-adjust: 100%;
}

body {
  margin: 0;
  font-family: 'Roboto', sans-serif;
}

header .flexContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 8em 0;
}

header {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 300px;
}

.flexContainer img {
  border-radius: 5px;
  margin-right: 10px;
}

header .flexheader {
  background-color: #d3d3d3;
  margin-top: -150px;
  opacity: 0.9;
  border-radius: 5px;
}

.flexheader h1 h2 {
  padding: 0 20px;
}

.flexheader h2 {
  font-weight: lighter;
  font-size: 16px;
}

.flexheader i {
  position: relative;
  right: -20px;
  top: 44px;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 25px 25px 0 0;
  border-color: #d3d3d3 transparent transparent;
}

main .firstContainer {
  background-color: hsla(0, 0%, 0%, 0.6);
}

.firstContainer ul {
  display: flex;
  justify-content: space-between;
  padding: 10px 25px;
  margin: 0;
}

li img {
  padding: 10px;
}

.secondContainer {
  background-image: linear-gradient(hsla(0, 0%, 0%, 0.6), hsl(180, 13%, 5%));
  padding-left: 30px;
  padding-right: 30px;
  padding-bottom: 10px;
}

.imgbox {
  height: 75px;
  min-width: (100% - 40px);
  background-image: url("/images/react.png");
  background-size: cover;
  background-position: center;
  margin-bottom: 0;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}

.textbox1 {
  background-color: #dedede;
  padding: 0 15px;
  margin: 0;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  position: relative;
}

h3 {
  background-color: #dedede;
  padding: 15px 15px 0;
  margin: 0;
}

h3 span {
  font-weight: lighter;
  font-size: 14px;
  padding-left: 5px;
}

p {
  background-color: #dedede;
  padding: 5px 15px 15px;
  margin-top: 0;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
}

.bluebox {
  position: absolute;
  right: 2em;
  bottom: -0.65em;
  width: 125px;
}

.bluebox h3 {
  background-color: #6aabd4;
  color: white;
  text-align: center;
  font-size: 16px;
  padding: 2px;
  border-radius: 5px;
}

.thirdContainer {
  background-color: #0d1111;
  padding: 30px;
}

.imgbox2 {
  height: 75px;
  min-width: (100% - 40px);
  background-image: url("/images/code.png");
  background-size: cover;
  background-position: center;
  margin-bottom: 0;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}

.footLine1 {
  background-color: #0d1111;
  text-align: center;
  font-size: 20px;
  color: #dedede;
  padding: 5px;
  margin: 0;
}

.footLine2 ul {
  display: flex;
  list-style: none;
  background-color: #0d1111;
  justify-content: center;
  padding: 5px;
  margin: 0;
}

.footLine3 p {
  color: #dedede;
  background-color: #0d1111;
  text-align: center;
  margin: 0;
  padding: 50px 0 30px;
  font-size: 14px;
}

